# osrs-flipper

./: .gitignore  CONTEXT.md  LICENSE  README.md  pyproject.toml
docs/adr/: 0001-manual-execution-not-a-bot.md  0002-conservative-fill-model.md  0003-single-price-and-ev-source-of-truth.md  0004-read-runelite-flipping-utilities-state.md
osrs_flipper/: __init__.py  alert.py  analysis.py  anomaly.py  api.py  cache.py  calibration.py  cli.py  combinations.py  combos.py  config.py  datasource.py  features.py  fills.py  flip_exporter.py  http.py  journal.py  local_export.py  macro.py  monitor.py  objective.py  persistence.py  planner.py  progress.py  quote.py  recovery.py  regret.py  runelite.py  scanner.py  store.py  tax.py  terminal.py  treasury.py  wealth.py
osrs_flipper/backtest/: __init__.py  engine.py  metrics.py
osrs_flipper/backtest/strategies/: __init__.py  base.py  margin_flip.py  mean_reversion.py  momentum.py
scripts/: bootstrap.py  collect.py  plot.py
sync/: fa4ceb8b032b.json
tests/: test_alert.py  test_analysis.py  test_anomaly.py  test_backtest.py  test_cache.py  test_calibration.py  test_combinations.py  test_combos.py  test_features.py  test_fills.py  test_flip_exporter.py  test_journal.py  test_local_export.py  test_macro.py  test_monitor.py  test_objective.py  test_persistence.py  test_planner.py  test_progress.py  test_quote.py  test_recovery.py  test_regret.py  test_runelite.py  test_scanner.py  test_tax.py  test_terminal.py  test_treasury.py  test_wealth.py
